navbar toolbar slider: fix a bug... previously if you cleared startup cache and restarted, the slider would have a hard time setting max width correctly, because CustomizableUI.jsm erroneously fires events related to... widget node creation before a node actually exists in some cases. this only happens when startup cache was cleared. for widgets added by addons, the node only appears a few ms AFTER... the event was fired. which means it'll set max width based only on... the number of built-in widgets, not addon widgets. for me this meant 10 buttons wide instead of 11. we can't fix the problem with the CUI module, but we can identify when the problem happens and schedule... another max width update ~12ms in the future. the widget should exist by then. this means the width will visibly change during startup, but only when you cleared the startup cache before launching Fx. most people don't clear the startup cache though so it shouldn't matter. I hadn't received any complaints about this, it's just something I noticed because I have to clear it all the time, in the course of writing these scripts. this bug didn't previously exist btw, I don't know what regressed though

--- a/resources/in-content/site-wiki.css
+++ b/resources/in-content/site-wiki.css
@@ -944,15 +944,19 @@ domain("wikimedia.org") {
         line-height: 17px !important;
     }
 
-    .mw-body-content blockquote {
+    .vector-body blockquote {
         border-left: 3px double hsl(220, 5%, 18%) !important;
         padding: 6px 16px !important;
     }
 
-    .mw-parser-output .flexquote {
+    .vector-body .flexquote {
         background-color: hsla(0, 0%, 32%, 0.1) !important;
         border-left: 3px double hsl(220, 5%, 18%) !important;
         border-radius: 0 3px 3px 0 !important;
+    }
+
+    .mw-body-content blockquote blockquote {
+        border: none !important;
     }
 
     /* boxes */
